// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index empty 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "engines": Object {
    "node": ">=14",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "license": "MIT",
  "main": "dist/index.js",
  "publishConfig": Object {
    "access": "public",
  },
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "version": "1.0.0",
}
`;

exports[`index existing package 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "bin": Object {
    "foo": "./dist/cli.js",
  },
  "dependencies": Object {
    "foo": "^1.0.0",
  },
  "description": "foo bar",
  "devDependencies": Object {
    "base-config-bar": "^1.0.0",
  },
  "engines": Object {
    "node": ">=14",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "keywords": Array [
    "foo",
    "bar",
  ],
  "license": "MIT",
  "main": "dist/index.js",
  "name": "foo",
  "peerDependencies": Object {
    "nuxt": "^1.0.0",
  },
  "publishConfig": Object {
    "access": "public",
  },
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "types": "types.d.ts",
  "version": "1.1.0",
}
`;

exports[`index git repo 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "engines": Object {
    "node": ">=14",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "license": "MIT",
  "main": "dist/index.js",
  "publishConfig": Object {
    "access": "public",
  },
  "repository": "dword-design/foo",
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "version": "1.0.0",
}
`;

exports[`index sub-folder 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "engines": Object {
    "node": ">=14",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "license": "MIT",
  "main": "dist/index.js",
  "publishConfig": Object {
    "access": "public",
  },
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "version": "1.0.0",
}
`;
